26/3/2017 1.4.2.0
    user visible changes client:
    * Merge branch 'wfi_lev': better checking of 2 types of wfi files
    * platform_helper.rmdir, platform_helper.rmfile got new parameter check_exist that will preform the deletion
        only if the file/folder exists. This is "for good measure" so we do not get redundant error messages during batch runs.

23/3/2017 1.4.1.0

    user visible changes client:
    * New index property: previous_sources where you can specified the previous names of the install_sources. These names will be used for 1) identifying  old versions that need update 2) files/folders that will be removed when the main IID is installed

    programmer visible changes:
    * create_remove_previous_sources_instructions_for_target_folder takes care of removing previous_sources
    * InstlClient.no_copy_items_by_sync_folder renamed no_copy_iids_by_sync_folder, values are now pre-sorted
    * InstlClient.all_items_by_target_folder renamed all_iids_by_target_folder, values are now pre-sorted

22/3/2017 1.4.0.3

    user visible changes client:
    * report-versions command: added option ('--only-installed') to show only installed products

    programmer visible changes:
    * read_item_details_from_node: changed to handle cases of illegal yaml with maps the have keys with same name

21/3/2017 1.4.0.2

    user visible changes client:
    * Fixed: the version would be written in the guid field of the require.yaml instead of the guid

19/3/2017 1.4.0.1

    user visible changes admin:
    * SVNTable.read_file_sizes: admin 'trans' command stopped working because bulk_update_mappings would not find the updated rows.
        So rows are now updated one by one.
    user visible changes client:
    * Fixed creation of paths for download on windows
    * added 'direct_sync' to allowed_item_keys to avoid warnings

18/3/2017 1.4.0.0

    user visible changes client:
    * Added support for direct sync

    programmer visible changes: