@@ -1,8 +1,13 @@
 26/3/2017 1.4.2.0
     user visible changes client:
+    * New config variable: REMOVE_PREVIOUS_SOURCES set to True be default, If set to False will prevent previous_sources from being deleted.
     * Merge branch 'wfi_lev': better checking of 2 types of wfi files
     * platform_helper.rmdir, platform_helper.rmfile got new parameter check_exist that will preform the deletion
         only if the file/folder exists. This is "for good measure" so we do not get redundant error messages during batch runs.
+
+    programmer visible changes:
+    * New function: ConfigVarList.ResolveVarToBool will resolve a variable from yes,no,true,false,y,n to True/False. Default value will be returned in case variable does not exist or cannot be converted to bool.
+    * New function: utils.str_to_bool a helper fro implementing ConfigVarList.ResolveVarToBool
 
 23/3/2017 1.4.1.0
 
